--- a/index.html
+++ b/index.html
@@ -112,41 +112,30 @@
   </header>
 
   <div class="container">
-    <!-- Applications -->
-    <div>
-      <h2>🌍 Cultural Heritage & AR Applications</h2>
-      <div class="reference">
-        J. Smith and A. Jones, “Augmented reality applications for cultural heritage preservation: A comprehensive review,” 
-        <i>J. Cult. Herit.</i>, vol. 25, no. 2, 2023.  
-        <a href="https://doi.org/10.1016/j.culher.2023.02.001" target="_blank">DOI</a>
-      </div>
-      <div class="reference">
-        R. Patel and S. Gupta, “Exploring user engagement in augmented reality heritage applications: A case study of Indian monuments,” 
-        <i>Int. J. Herit. Stud.</i>, vol. 19, no. 4, 2022.  
-        <a href="https://doi.org/10.1080/13527258.2022.1901234" target="_blank">DOI</a>
-      </div>
-      <div class="reference">
-        H. Lee and S. Kim, “Augmented reality and cultural heritage tourism: A systematic literature review,” 
-        <i>Tour. Manag.</i>, vol. 55, no. 3, 2024.  
-        <a href="https://doi.org/10.1016/j.tourman.2023.105123" target="_blank">DOI</a>
-      </div>
-      <div class="reference">
-        M. Garcia and L. Rodriguez, “Augmented reality for cultural heritage preservation: Opportunities and challenges,” 
-        <i>J. Archaeol. Sci.</i>, vol. 45, no. 2, 2022.  
-        <a href="https://doi.org/10.1016/j.jas.2022.103456" target="_blank">DOI</a>
-      </div>
-      <div class="reference">
-        X. Chen and H. Li, “Augmented reality applications for cultural heritage interpretation: A review and future directions,” 
-        <i>Herit. Soc.</i>, vol. 12, no. 3, 2024.  
-        <a href="https://doi.org/10.1080/2159032X.2023.2140056" target="_blank">DOI</a>
-      </div>
-      <div class="reference">
-        R. G. Boboc et al., “Augmented reality in cultural heritage: An overview of the last decade of applications,” 
-        <i>Appl. Sci.</i>, vol. 12, no. 19, 2022.  
-        <a href="https://doi.org/10.3390/su15118967" target="_blank">DOI</a>
-      </div>
-    </div>
-
+   <!-- Cultural Heritage & AR Applications -->
+<div>
+  <h2>🌍 Cultural Heritage & AR Applications</h2>
+  <div class="reference">
+    R.G. Boboc et al., “Augmented reality in cultural heritage: An overview of the last decade of applications,” <i>Appl. Sci.</i>, vol. 12, no. 19, 2022.  
+    <a href="https://doi.org/10.3390/su15118967" target="_blank">DOI</a>
+  </div>
+  <div class="reference">
+    M.K. Karaman, “The role of VR, AR, and artificial intelligence in the digital preservation of cultural heritage,” <i>SDGs Review</i>, 2025.  
+    <a href="https://sdgsreview.org/LifestyleJournal/article/download/5260/2796/16735" target="_blank">Link</a>
+  </div>
+  <div class="reference">
+    M. Skublewska-Paszkowska, “3D technologies for intangible cultural heritage,” <i>PMC</i>, 2022.  
+    <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC8724653/" target="_blank">Link</a>
+  </div>
+  <div class="reference">
+    M.S. Anwar, “Metaverse and XR for cultural heritage education,” <i>SpringerLink</i>, 2025.  
+    <a href="https://link.springer.com/article/10.1007/s10055-025-01126-z" target="_blank">Link</a>
+  </div>
+  <div class="reference">
+    S. Chen, “We ARe inspired: How augmented reality empowers cultural communication,” <i>ScienceDirect</i>, 2025.  
+    <a href="https://www.sciencedirect.com/science/article/abs/pii/S0040162525003841" target="_blank">Link</a>
+  </div>
+</div>
     <!-- Technical -->
     <div>
       <h2>⚙️ Technical & Educational AR/VR</h2>
@@ -182,3 +171,4 @@
   </script>
 </body>
 </html>
+
